www/skins/prod/000000/prodcolor.css
/******* GLOBAL PROD **********************************************************/

html {
    border: medium none;
    height: 100%;
    margin: 0;
    padding: 0;
    z-index: 1;
}

html, body {
    font-size: 12px;
    z-index: 1;
}

*::-moz-selection, *::selection{
    background: white;
    color: black;
}

input::selection, textarea::selection,
input::-moz-selection, textarea::-moz-selection {
    background: #404040;
    color: white;
}

label {
    color: #FFFFFF;
}

legend {
    color: #FFFFFF;
    width: auto;
    border: none;
}

EM {
    FONT-STYLE: normal;
    BACKGROUND-COLOR: #D82400;
}

.clickable {
    cursor: pointer;
}

.diapo.selected {
    cursor: url('../../icons/cursor-move.png'), -moz-grab;
}

.ui-state-default, .ui-widget-content .ui-state-default,
.ui-widget-header .ui-state-default {
    font-weight: normal;
}

.ui-widget-overlay {
    background-image: none;
}

.ui-widget-content.ui-autocomplete {
    background-color: black;
    background-image: none;
    z-index: 650;
}

.ui-widget-content.ui-autocomplete .ui-state-hover,
.ui-widget-content.ui-autocomplete .ui-widget-content .ui-state-hover,
.ui-widget-content.ui-autocomplete .ui-widget-header .ui-state-hover,
.ui-widget-content.ui-autocomplete .ui-state-focus,
.ui-widget-content.ui-autocomplete .ui-widget-content .ui-state-focus,
.ui-widget-content.ui-autocomplete .ui-widget-header .ui-state-focus {
    border : 1px solid white;
}

body {
    color: white;
    background-color: #1a1a1a;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    overflow: hidden;
    overflow-x: hidden;
    overflow-y: hidden;
}

#maincontainer {
    min-width: 970px;
    min-height: 500px;
}

.PNB {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

.PNB .ui-corner-top {
    top: 73px;
}


.PNB10 {
    position: absolute;
    top: 10px;
    left: 10px;
    right: 10px;
    bottom: 10px;
}

.minilogo {
    max-height: 20px;
}

.ww_window .ww_content {
    overflow-x: hidden;
    overflow-y: auto;
}

.boxCloser {
    cursor: pointer;
    color: rgb(204, 204, 204);
    font-weight: bold;
    font-size: 12px;
    text-align: right;
    text-decoration: underline;
    height: 16px;
}

.ww_status {
    background-image: url('images/ww_title.gif');
    background-repeat: repeat-x;
    color: #0077bc;
    font-size: 8pt;
}

span.ww_winTitle {
    letter-spacing: 1px;
    color: #0077bc;
    font-size: 8pt;
    font-weight: bold;
}

.ui-dialog .ui-dialog-content.loading, .loading {
    background-image: url('../../icons/loader000.gif');
    background-position: center center;
    background-repeat: no-repeat;
}

#divpage {
    background-color: #212121;
    padding: 10px 0;
    margin: 0 10px;
}

.desktop {
    background-position: center center;
    left: 0px;
    overflow: hidden;
    position: absolute;
    top: 0px;
}

.ui-helper-reset {
    line-height: auto;
}

.ui-tabs .ui-tabs-nav li a {
    padding: 3px 5px 0;
}

#idFrameC {
    top: 0 !important;
}

#idFrameC .wrapper {
    background-color: #333333;
    right: 10px;
}

.ui-tabs {
    background-color: tranparent;
    padding: 0;
    border-style: none;
}

.ui-tabs .ui-tabs-nav {
    border: none;
    padding: 0px;
}

#sizeAns_slider, #nperpage_slider, #EDIT_ZOOMSLIDER {
    background-color: #666666;
    border-color: #666666;
    height: 10px;

}

#sizeAns_slider .ui-slider-handle, #nperpage_slider .ui-slider-handle,
#EDIT_ZOOMSLIDER  .ui-slider-handle {
    background-color: #1a1a1a;
    width: 8px;
    cursor: col-resize;
}

.ui-widget-header {
    background: none;
    border: transparent 0px none;
}

.ui-tabs .ui-tabs-nav li {
    background-color: #666666;
    height: 30px;
    border: none;
    overflow: hidden;
}

.ui-tabs .ui-tabs-nav li.ui-tabs-active {
    background-color: #404040;
    border: none;
}

#idFrameC .ui-tabs .ui-tabs-nav li {
    width: auto;
    height: 81px;
    display: inline-block;
    background-color: #333333;
    z-index: 10;
}

#idFrameC .ui-tabs #thesaurus_tab li a {
    color: #FFF;
}

#idFrameC .ui-tabs #thesaurus_tab li.th_tab {
    height: 34px;
}

#THPD_T, #THPD_C {
    margin-top: 10px;
    margin-left: 5px;
}

#idFrameC .ui-tabs .ui-tabs-nav li a {
    padding: 5px;
    margin: 5px;
    border-radius: 4px;
    -moz-border-radius: 4px;
    -webkit-border-radius: 4px;
}

#idFrameC .ui-tabs .ui-tabs-nav li:hover a {
    background-color: #666666;
}

#idFrameC .ui-tabs .ui-tabs-nav li.ui-state-active a {
    background-color: #666666;
}

#idFrameC ul.icon-menu {
    width: 100%;
}

#idFrameC .icon-menu .WZbasketTab {
    display: block;
    background-image: url("/skins/icons/workzone32.png");
    background-repeat: no-repeat;
    background-position: 8px 5px;
    width: 54px;
    height: 32px;
}

#idFrameC .icon-menu .WZtabs {
    display: block;
    width: 32px;
    height: 32px;
}

#basket_menu_trigger {
     padding: 7px 3px;
     float: right;
     font-size: 12px;
     cursor: pointer;
}

#idFrameC.closed .icon-menu li {
    clear: left;
}

#idFrameC.closed .ui-tabs-panel,
#idFrameC.closed .ui-resizable-handle {
    display: none;
}

#idFrameC li.proposals_WZ.active img.proposals_off,
#idFrameC li.proposals_WZ img.proposals_on {
    display: none;
}

#idFrameC li.proposals_WZ.active img.proposals_on,
#idFrameC li.proposals_WZ img.proposals_off {
    display: block;
}

.ui-tabs .ui-tabs-nav li a {
    padding: 10px 8px;
    font-size: 0.8em;
    font-weight: normal;
}

.ui-tabs .ui-tabs-nav li.ui-tabs-active a,
.ui-tabs .ui-tabs-nav li.ui-state-disabled a,
.ui-tabs .ui-tabs-nav li.ui-state-processing a {
    cursor: pointer;
}

.ui-tabs .ui-tabs-nav li a,
.ui-tabs.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-active a {
    cursor: pointer;
}

.ui-tabs .ui-tabs-panel {
    overflow-x: hidden;
    overflow-y: auto;
    display: block;
    border-width: 0;
    padding: 0px;
    background-color: #333333;
}
/* ... */

